--- a/mblog/templates/index.html
+++ b/mblog/templates/index.html
@@ -1,22 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>
-        歡迎來到我的部落格
-    </title>
-</head>
-<body>
-    <h1>
-        歡迎來到我的部落格
-    </h1>
-    <hr>
+<!-- index.html -->
+{% extends "base.html" %}
+{% load markdown_extras %}
+{% block title %} 歡迎光臨我的部落格 {% endblock %}
+{% block headmessage %}
+    <h3 style="font-family: 標楷體;">本站文章列表</a>
+{% endblock %}
+{% block content %}
     {% for post in posts %}
-        <p style='font-family: 微軟正黑體;font-size: 24px;font-weight: bold;'>
-            <a href='/post/{{ post.slug }}'>{{ post.title }}</a>
-        </p>
+    <div class="card">
+        <div class="card-header">
+            <p style="font-family: 微軟正黑體;font-size: 14px;font-weight:bold;">
+                <a href="/post/{{ post.slug }}">{{ post.title }}</a>
+            </p>
+        </div>
+        <div class="card-body" style="background-color: #ffffdd">
+            <p>
+                {{ post.body | truncatechars:40 | convert_markdown | safe }}
+            </p>
+        </div>
+        <div class="=card-footer" style="background-color: #efefef">
+            <p>
+                -發布時間: {{ post.pub_date | date:"Y M d, h:m:s" }}
+            </p>
+        </div>
+    </div>
+    <br>
     {% endfor %}
-    <hr>
-    <h3>現在時刻: {{ now }}</h3>
-</body>
-</html>
+{% endblock %}
