--- a/mblog/templates/post.html
+++ b/mblog/templates/post.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>
-        歡迎來到我的部落格
-    </title>
-</head>
-<body>
-    <h1>{{ post.title }}</h1>
-    <hr>
-        <p style='font-family: 微軟正黑體;font-size: 16px;letter-spacing: 2pt;'>
-            {{ post.body }}</a>
-        </p>
-    <hr>
-    <h3><a href="/">回到首頁</a></h3>
-</body>
-</html>
+<!-- post.html -->
+{% extends 'base.html' %}
+{% load markdown_extras %}
+{% block title %}
+    {{ post.title }} - '文學天地' 
+{% endblock %}
+
+{% block headmessage %}
+    <h3 style='font-family:微軟正黑體;'>{{ post.title }}</h3>
+{% endblock %}
+
+{% block content %}
+    <p style='font-family:微軟正黑體;font-size:12pt; letter-spacing:2pt;'>
+        {{ post.body | convert_markdown | safe }}</a>
+    </p>
+{% endblock %}
