--- a/mblog/templates/footer.html
+++ b/mblog/templates/footer.html
@@ -5,4 +5,5 @@
     {% else %}
     <p style="font-family: 微軟正黑體;">本文內容取自網路，如有侵權請來信通知下架...</p>
     {% endif %}
+    <a href="https://info.flagcounter.com/w4aF"><img src="https://s01.flagcounter.com/count/w4aF/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_18/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 {% endblock %}
